fixed styling issue where reconmended container would overlap data on smaller screens

--- a/client/src/scss/_mobile.scss
+++ b/client/src/scss/_mobile.scss
@@ -36,6 +36,11 @@
   .ticker-home-wrap {
     flex-direction: column;
   }
+
+  .price-text-wrap,
+  .percent-wrap {
+    width: 80px;
+  }
 }
 
 // smartphones
